dataset1235/2025-2/1955397009/users/4151380891/executions/2304143742_359761547.log
== SUBMISSION (2025-09-02 14:49:19)
-- CODE: 
idade = int(input(" "))

print(idade)

 if idade >= 2:
   print("paga")
else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 14:46:39)
-- CODE: 
idade = int(input("anos:10 "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:31:53)
-- CODE: 
anos = float(input("paga: "))

print(anos)

if anos >= 2 anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:49:47)
-- CODE: 
idade = int(input())

print(idade)

 if idade >= 2:
   print("paga")
else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:27:31)
-- CODE: 
anos = int(input("paga: "))

print(anos)

if anos>= anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos>= anos
                  ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:30:14)
-- CODE: 
anos = float(input("paga: "))

print(anos)

if anos >= 2 anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:46:39)
-- CODE: 
idade = int(input("anos:10 "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:49:55)
-- CODE: 
idade = int(input())

print(idade)

 if idade >= :
   print("paga")
else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:30:59)
-- CODE: 
anos = float(input("paga: "))

print(anos)

if anos <= 2 anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos <= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:46:31)
-- CODE: 
idade = int(input("anos: "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:46:38)
-- CODE: 
idade = int(input("anos:10 "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 14:46:31)
-- CODE: 
idade = int(input("anos: "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:46:38)
-- CODE: 
idade = int(input("anos:10 "))

print(idade)

 if idade >= 2:
   print("paga")

 else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 14:49:56)
-- CODE: 
idade = int(input())

print(idade)

 if idade >= :
   print("paga")
else:
   print(nao_paga)
  

  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= :
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:28:11)
-- CODE: 
anos = int(input("paga: "))

print(anos)

if anos >= anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if anos >= anos
                   ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:25:44)
-- CODE: 
idade = int(input("idade: "))

print(idade)

 if idade >= 2:
   print("paga")
else idade:
   print("nao_paga")
  

  



   
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 14:32:15)
-- CODE: 
anos = float(input("paga: "))

print(anos)

if paga >= 2 anos
   print("paga")

else:
  print(nao_paga)



  



   
 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if paga >= 2 anos
                 ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 15:15:51)
-- CODE: 
idade = int(input("idade: "))

print(idade)

 if idade >= 2:
   print("paga")
else: idade
   print("nao_paga")
  

  



   
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 5
    if idade >= 2:
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
